@@ -1,0 +1,16 @@
+title: Total and used filehandles on system 
+agents: linux
+catalog: os/kernel
+license: GPL
+distribution: check_mk
+description:
+ This check measures the current used fileshandles and sets it
+ in relation to the maximum. 
+
+ Upper default levels are set to 80, 90 %. These levels are configurable.
+
+perfdata:
+ The percentage of used filehandles.
+
+inventory:
+ One service is created.
