@@ -164,6 +164,7 @@
     * 3803 netapp_api_connection: reports any errors happened during the collection of data...
     * 3859 check_mail_loop.vbs: New MRPE script to perform a mail loop check via Outlook MAPI...
     * 3838 hitachi_hus_dku & hitachi_hus_dkc: more detailed output even if everything is in state OK...
+    * 3839 filehandler: added new plugin for monitoring file handles in linux...
     * 3073 FIX: windows agent: relative paths to mrpe scripts are now treated as relative to the agent installation directory...
     * 3061 FIX: mk_jolokia: Fixed debugging of the agent plugin
     * 3074 FIX: windows agent: fixed incorrect values for 32-bit performance counters
